/*
 *  Copyright 2017 Google Inc. All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

syntax = "proto2";

package goosci;
option java_package = "com.google.android.apps.forscience.whistlepunk.metadata";
option java_outer_classname = "GoosciSharedMetadata";
option objc_class_prefix = "GSJ";
option optimize_for = LITE_RUNTIME;


/*
 * Represents metadata shared across the whole Science Journal app.
 * Added in V2.
 */
message SharedMetadata {
    // Experiment state that is per-device, such as whether the experiment is archived.
    repeated ExperimentOverview experiments = 1;

    // TODO: b/36397730
    // repeated SensorSpec sensorSpecs = 2;
}

/*
 * Data about an experiment that is specific to a device.
 * Some data, like title and imagePath, is duplicated here in order to make the Experiment List
 * load faster: this way we don't need to parse every available experiment.
 */
message ExperimentOverview {
    // Our local lookup Id for this experiment.
    optional string experimentId = 1;

    // The user-entered title of this experiment.
    optional string title = 2;

    // The path to an image used for this experiment, if applicable.
    optional string imagePath = 3;

    // The time when this experiment was last used.
    optional int64 lastUsedTimeMs = 4;

    // The number of trials in this experiment.
    optional int32 trialCount = 5;

    // Information about DriveFileID and sync state can be added here as needed.
}